syntax = "proto3";

option java_multiple_files = true;

package core;

service PortalService {
    rpc handleRequest (RequestInfo) returns (RequestReply);
    rpc uploadFileRequest (RequestInfo) returns (stream FileData);
}

message FileData {
    bytes data = 1;
}

message RequestReply {
    bool gotTheJob = 1;
}

message RequestInfo {
    string id = 1;
    string type = 2;
}

